--- a/weather_project.ipynb
+++ b/weather_project.ipynb
@@ -10,26 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "cb4d10bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\mamou\\AppData\\Local\\Programs\\Python\\Python310\\python.exe\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "print(sys.executable)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "c9fb6db5",
    "metadata": {},
    "outputs": [],
@@ -39,12 +20,14 @@
     "import json\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "\n"
+    "import sqlite3\n",
+    "\n",
+    "from datetime import datetime\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "id": "332cd905",
    "metadata": {},
    "outputs": [
@@ -54,7 +37,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "5080ea9a",
    "metadata": {},
    "outputs": [
@@ -102,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "5205badf",
    "metadata": {},
    "outputs": [
@@ -132,162 +115,197 @@
        "      <th>humidity</th>\n",
        "      <th>description</th>\n",
        "      <th>wind_speed</th>\n",
+       "      <th>date_releve</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Paris</td>\n",
-       "      <td>3.57</td>\n",
-       "      <td>82</td>\n",
-       "      <td>couvert</td>\n",
-       "      <td>4.12</td>\n",
+       "      <td>1.57</td>\n",
+       "      <td>87</td>\n",
+       "      <td>ciel dégagé</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>2025-11-21 19:41:37.753814</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Lyon</td>\n",
-       "      <td>-0.96</td>\n",
+       "      <td>-1.16</td>\n",
        "      <td>84</td>\n",
-       "      <td>légères chutes de neige</td>\n",
-       "      <td>0.45</td>\n",
+       "      <td>couvert</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>2025-11-21 19:41:37.854054</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Marseille</td>\n",
-       "      <td>4.01</td>\n",
-       "      <td>57</td>\n",
+       "      <td>2.28</td>\n",
+       "      <td>62</td>\n",
        "      <td>couvert</td>\n",
-       "      <td>4.02</td>\n",
+       "      <td>2.24</td>\n",
+       "      <td>2025-11-21 19:41:37.955108</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Toulouse</td>\n",
-       "      <td>4.99</td>\n",
-       "      <td>65</td>\n",
-       "      <td>couvert</td>\n",
-       "      <td>7.20</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>81</td>\n",
+       "      <td>nuageux</td>\n",
+       "      <td>7.72</td>\n",
+       "      <td>2025-11-21 19:41:38.061109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Nice</td>\n",
-       "      <td>-3.85</td>\n",
+       "      <td>-4.33</td>\n",
        "      <td>69</td>\n",
        "      <td>légères chutes de neige</td>\n",
-       "      <td>2.23</td>\n",
+       "      <td>2.86</td>\n",
+       "      <td>2025-11-21 19:41:38.170855</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Bordeaux</td>\n",
-       "      <td>8.26</td>\n",
-       "      <td>65</td>\n",
-       "      <td>partiellement nuageux</td>\n",
-       "      <td>5.14</td>\n",
+       "      <td>5.15</td>\n",
+       "      <td>70</td>\n",
+       "      <td>ciel dégagé</td>\n",
+       "      <td>3.09</td>\n",
+       "      <td>2025-11-21 19:41:38.284357</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Lille</td>\n",
-       "      <td>3.84</td>\n",
-       "      <td>88</td>\n",
-       "      <td>partiellement nuageux</td>\n",
+       "      <td>-0.20</td>\n",
+       "      <td>94</td>\n",
+       "      <td>brume</td>\n",
        "      <td>2.06</td>\n",
+       "      <td>2025-11-21 19:41:38.398460</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>Nantes</td>\n",
-       "      <td>8.96</td>\n",
-       "      <td>53</td>\n",
-       "      <td>nuageux</td>\n",
-       "      <td>4.12</td>\n",
+       "      <td>4.96</td>\n",
+       "      <td>65</td>\n",
+       "      <td>ciel dégagé</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>2025-11-21 19:41:38.503077</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>Strasbourg</td>\n",
-       "      <td>3.01</td>\n",
-       "      <td>65</td>\n",
-       "      <td>peu nuageux</td>\n",
-       "      <td>5.14</td>\n",
+       "      <td>-1.11</td>\n",
+       "      <td>74</td>\n",
+       "      <td>ciel dégagé</td>\n",
+       "      <td>3.23</td>\n",
+       "      <td>2025-11-21 19:41:38.610075</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>Montpellier</td>\n",
-       "      <td>6.39</td>\n",
-       "      <td>41</td>\n",
+       "      <td>5.83</td>\n",
+       "      <td>47</td>\n",
        "      <td>ciel dégagé</td>\n",
-       "      <td>10.29</td>\n",
+       "      <td>8.75</td>\n",
+       "      <td>2025-11-21 19:41:38.718721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Rennes</td>\n",
-       "      <td>7.34</td>\n",
-       "      <td>59</td>\n",
-       "      <td>peu nuageux</td>\n",
-       "      <td>8.94</td>\n",
+       "      <td>4.80</td>\n",
+       "      <td>70</td>\n",
+       "      <td>ciel dégagé</td>\n",
+       "      <td>2.57</td>\n",
+       "      <td>2025-11-21 19:41:38.822716</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>Grenoble</td>\n",
        "      <td>-7.46</td>\n",
-       "      <td>77</td>\n",
+       "      <td>86</td>\n",
        "      <td>chutes de neige</td>\n",
-       "      <td>3.02</td>\n",
+       "      <td>2.33</td>\n",
+       "      <td>2025-11-21 19:41:38.925716</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>Dijon</td>\n",
-       "      <td>2.85</td>\n",
-       "      <td>75</td>\n",
-       "      <td>nuageux</td>\n",
-       "      <td>5.14</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>86</td>\n",
+       "      <td>ciel dégagé</td>\n",
+       "      <td>4.63</td>\n",
+       "      <td>2025-11-21 19:41:39.025716</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>Avignon</td>\n",
-       "      <td>4.81</td>\n",
-       "      <td>52</td>\n",
-       "      <td>nuageux</td>\n",
-       "      <td>14.40</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>59</td>\n",
+       "      <td>ciel dégagé</td>\n",
+       "      <td>12.35</td>\n",
+       "      <td>2025-11-21 19:41:39.129487</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>Reims</td>\n",
-       "      <td>3.88</td>\n",
-       "      <td>81</td>\n",
-       "      <td>peu nuageux</td>\n",
-       "      <td>3.09</td>\n",
+       "      <td>0.88</td>\n",
+       "      <td>93</td>\n",
+       "      <td>ciel dégagé</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>2025-11-21 19:41:39.229328</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>Metz</td>\n",
-       "      <td>4.56</td>\n",
-       "      <td>65</td>\n",
-       "      <td>peu nuageux</td>\n",
-       "      <td>4.12</td>\n",
+       "      <td>-0.62</td>\n",
+       "      <td>74</td>\n",
+       "      <td>ciel dégagé</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>2025-11-21 19:41:39.330784</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          ville  temp  humidity              description  wind_speed\n",
-       "0         Paris  3.57        82                  couvert        4.12\n",
-       "1          Lyon -0.96        84  légères chutes de neige        0.45\n",
-       "2     Marseille  4.01        57                  couvert        4.02\n",
-       "3      Toulouse  4.99        65                  couvert        7.20\n",
-       "4          Nice -3.85        69  légères chutes de neige        2.23\n",
-       "5      Bordeaux  8.26        65    partiellement nuageux        5.14\n",
-       "6         Lille  3.84        88    partiellement nuageux        2.06\n",
-       "7        Nantes  8.96        53                  nuageux        4.12\n",
-       "8    Strasbourg  3.01        65              peu nuageux        5.14\n",
-       "9   Montpellier  6.39        41              ciel dégagé       10.29\n",
-       "10       Rennes  7.34        59              peu nuageux        8.94\n",
-       "11     Grenoble -7.46        77          chutes de neige        3.02\n",
-       "12        Dijon  2.85        75                  nuageux        5.14\n",
-       "13      Avignon  4.81        52                  nuageux       14.40\n",
-       "14        Reims  3.88        81              peu nuageux        3.09\n",
-       "15         Metz  4.56        65              peu nuageux        4.12"
+       "          ville  temp  humidity              description  wind_speed  \\\n",
+       "0         Paris  1.57        87              ciel dégagé        3.60   \n",
+       "1          Lyon -1.16        84                  couvert        0.89   \n",
+       "2     Marseille  2.28        62                  couvert        2.24   \n",
+       "3      Toulouse  2.99        81                  nuageux        7.72   \n",
+       "4          Nice -4.33        69  légères chutes de neige        2.86   \n",
+       "5      Bordeaux  5.15        70              ciel dégagé        3.09   \n",
+       "6         Lille -0.20        94                    brume        2.06   \n",
+       "7        Nantes  4.96        65              ciel dégagé        1.54   \n",
+       "8    Strasbourg -1.11        74              ciel dégagé        3.23   \n",
+       "9   Montpellier  5.83        47              ciel dégagé        8.75   \n",
+       "10       Rennes  4.80        70              ciel dégagé        2.57   \n",
+       "11     Grenoble -7.46        86          chutes de neige        2.33   \n",
+       "12        Dijon  0.85        86              ciel dégagé        4.63   \n",
+       "13      Avignon  3.79        59              ciel dégagé       12.35   \n",
+       "14        Reims  0.88        93              ciel dégagé        3.60   \n",
+       "15         Metz -0.62        74              ciel dégagé        1.54   \n",
+       "\n",
+       "                  date_releve  \n",
+       "0  2025-11-21 19:41:37.753814  \n",
+       "1  2025-11-21 19:41:37.854054  \n",
+       "2  2025-11-21 19:41:37.955108  \n",
+       "3  2025-11-21 19:41:38.061109  \n",
+       "4  2025-11-21 19:41:38.170855  \n",
+       "5  2025-11-21 19:41:38.284357  \n",
+       "6  2025-11-21 19:41:38.398460  \n",
+       "7  2025-11-21 19:41:38.503077  \n",
+       "8  2025-11-21 19:41:38.610075  \n",
+       "9  2025-11-21 19:41:38.718721  \n",
+       "10 2025-11-21 19:41:38.822716  \n",
+       "11 2025-11-21 19:41:38.925716  \n",
+       "12 2025-11-21 19:41:39.025716  \n",
+       "13 2025-11-21 19:41:39.129487  \n",
+       "14 2025-11-21 19:41:39.229328  \n",
+       "15 2025-11-21 19:41:39.330784  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +336,8 @@
     "            \"temp\": data[\"main\"][\"temp\"],\n",
     "            \"humidity\": data[\"main\"][\"humidity\"],\n",
     "            \"description\": data[\"weather\"][0][\"description\"],\n",
-    "            \"wind_speed\": data[\"wind\"][\"speed\"]\n",
+    "            \"wind_speed\": data[\"wind\"][\"speed\"],\n",
+    "            \"date_releve\": datetime.now() \n",
     "        }\n",
     "        donnees_meteo.append(ville_data)\n",
     "    else:\n",
@@ -330,19 +349,187 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cdd61945",
+   "metadata": {},
+   "source": [
+    "### Analyser le dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "8dd0ace7",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ville                  object\n",
+       "temp                  float64\n",
+       "humidity                int64\n",
+       "description            object\n",
+       "wind_speed            float64\n",
+       "date_releve    datetime64[ns]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# voir les types de données\n",
+    "df_meteo.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d93c4e54",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Créer ou connecter à la base SQLite\n",
+    "conn = sqlite3.connect(\"meteo.db\")\n",
+    "cursor = conn.cursor()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3bbfb800",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute(\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS meteo (\n",
+    "    ville TEXT,\n",
+    "    temp REAL,\n",
+    "    humidity INTEGER,\n",
+    "    description TEXT,\n",
+    "    wind_speed REAL,\n",
+    "    date_releve TEXT\n",
+    ")\n",
+    "\"\"\")\n",
+    "conn.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "2b25e04a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _, row in df_meteo.iterrows():\n",
+    "    cursor.execute(\"\"\"\n",
+    "    INSERT INTO meteo (ville, temp, humidity, description, wind_speed, date_releve)\n",
+    "    VALUES (?, ?, ?, ?, ?, ?)\n",
+    "    \"\"\", (\n",
+    "        row['ville'],\n",
+    "        row['temp'],\n",
+    "        row['humidity'],\n",
+    "        row['description'],\n",
+    "        row['wind_speed'],\n",
+    "        row['date_releve'].strftime(\"%Y-%m-%d %H:%M:%S\")  # convertir datetime en texte\n",
+    "    ))\n",
+    "\n",
+    "conn.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b84271ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Données météo insérées avec succès dans la base SQL !\n"
+     ]
+    }
+   ],
+   "source": [
+    "conn.close()\n",
+    "print(\"Données météo insérées avec succès dans la base SQL !\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fdb91a4",
+   "metadata": {},
+   "source": [
+    "### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "49a2bddf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Se connecter à la base SQLite\n",
+    "conn = sqlite3.connect(\"meteo.db\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8acdd2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         ville  temp  humidity              description  wind_speed  \\\n",
+      "0        Paris  1.57        87              ciel dégagé        3.60   \n",
+      "1         Lyon -1.16        84                  couvert        0.89   \n",
+      "2    Marseille  2.28        62                  couvert        2.24   \n",
+      "3     Toulouse  2.99        81                  nuageux        7.72   \n",
+      "4         Nice -4.33        69  légères chutes de neige        2.86   \n",
+      "5     Bordeaux  5.15        70              ciel dégagé        3.09   \n",
+      "6        Lille -0.20        94                    brume        2.06   \n",
+      "7       Nantes  4.96        65              ciel dégagé        1.54   \n",
+      "8   Strasbourg -1.11        74              ciel dégagé        3.23   \n",
+      "9  Montpellier  5.83        47              ciel dégagé        8.75   \n",
+      "\n",
+      "           date_releve  \n",
+      "0  2025-11-21 19:42:02  \n",
+      "1  2025-11-21 19:42:02  \n",
+      "2  2025-11-21 19:42:02  \n",
+      "3  2025-11-21 19:42:02  \n",
+      "4  2025-11-21 19:42:02  \n",
+      "5  2025-11-21 19:42:02  \n",
+      "6  2025-11-21 19:42:02  \n",
+      "7  2025-11-21 19:42:02  \n",
+      "8  2025-11-21 19:42:02  \n",
+      "9  2025-11-21 19:42:02  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lire toutes les données de la table \"meteo\"\n",
+    "df = pd.read_sql_query(\"SELECT * FROM meteo\", conn)\n",
+    "\n",
+    "# Afficher les 10 premières lignes\n",
+    "df.head()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10 (EnvData)",
    "language": "python",
-   "name": "python3"
+   "name": "envdata"
   },
   "language_info": {
    "codemirror_mode": {
