modifcation du readme

--- a/weather_project.ipynb
+++ b/weather_project.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "id": "5205badf",
    "metadata": {},
    "outputs": [
@@ -122,11 +122,11 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Paris</td>\n",
-       "      <td>1.57</td>\n",
+       "      <td>1.50</td>\n",
        "      <td>87</td>\n",
        "      <td>ciel dégagé</td>\n",
        "      <td>3.60</td>\n",
-       "      <td>2025-11-21 19:41:37.753814</td>\n",
+       "      <td>2025-11-21 20:00:14.902067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -134,26 +134,26 @@
        "      <td>-1.16</td>\n",
        "      <td>84</td>\n",
        "      <td>couvert</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>2025-11-21 19:41:37.854054</td>\n",
+       "      <td>3.11</td>\n",
+       "      <td>2025-11-21 20:00:15.002066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Marseille</td>\n",
-       "      <td>2.28</td>\n",
-       "      <td>62</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>64</td>\n",
        "      <td>couvert</td>\n",
-       "      <td>2.24</td>\n",
-       "      <td>2025-11-21 19:41:37.955108</td>\n",
+       "      <td>5.81</td>\n",
+       "      <td>2025-11-21 20:00:15.114667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Toulouse</td>\n",
        "      <td>2.99</td>\n",
        "      <td>81</td>\n",
-       "      <td>nuageux</td>\n",
-       "      <td>7.72</td>\n",
-       "      <td>2025-11-21 19:41:38.061109</td>\n",
+       "      <td>ciel dégagé</td>\n",
+       "      <td>7.20</td>\n",
+       "      <td>2025-11-21 20:00:15.217667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -161,151 +161,30 @@
        "      <td>-4.33</td>\n",
        "      <td>69</td>\n",
        "      <td>légères chutes de neige</td>\n",
-       "      <td>2.86</td>\n",
-       "      <td>2025-11-21 19:41:38.170855</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Bordeaux</td>\n",
-       "      <td>5.15</td>\n",
-       "      <td>70</td>\n",
-       "      <td>ciel dégagé</td>\n",
-       "      <td>3.09</td>\n",
-       "      <td>2025-11-21 19:41:38.284357</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Lille</td>\n",
-       "      <td>-0.20</td>\n",
-       "      <td>94</td>\n",
-       "      <td>brume</td>\n",
-       "      <td>2.06</td>\n",
-       "      <td>2025-11-21 19:41:38.398460</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Nantes</td>\n",
-       "      <td>4.96</td>\n",
-       "      <td>65</td>\n",
-       "      <td>ciel dégagé</td>\n",
-       "      <td>1.54</td>\n",
-       "      <td>2025-11-21 19:41:38.503077</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Strasbourg</td>\n",
-       "      <td>-1.11</td>\n",
-       "      <td>74</td>\n",
-       "      <td>ciel dégagé</td>\n",
-       "      <td>3.23</td>\n",
-       "      <td>2025-11-21 19:41:38.610075</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Montpellier</td>\n",
-       "      <td>5.83</td>\n",
-       "      <td>47</td>\n",
-       "      <td>ciel dégagé</td>\n",
-       "      <td>8.75</td>\n",
-       "      <td>2025-11-21 19:41:38.718721</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Rennes</td>\n",
-       "      <td>4.80</td>\n",
-       "      <td>70</td>\n",
-       "      <td>ciel dégagé</td>\n",
-       "      <td>2.57</td>\n",
-       "      <td>2025-11-21 19:41:38.822716</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Grenoble</td>\n",
-       "      <td>-7.46</td>\n",
-       "      <td>86</td>\n",
-       "      <td>chutes de neige</td>\n",
-       "      <td>2.33</td>\n",
-       "      <td>2025-11-21 19:41:38.925716</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Dijon</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>86</td>\n",
-       "      <td>ciel dégagé</td>\n",
-       "      <td>4.63</td>\n",
-       "      <td>2025-11-21 19:41:39.025716</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Avignon</td>\n",
-       "      <td>3.79</td>\n",
-       "      <td>59</td>\n",
-       "      <td>ciel dégagé</td>\n",
-       "      <td>12.35</td>\n",
-       "      <td>2025-11-21 19:41:39.129487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Reims</td>\n",
-       "      <td>0.88</td>\n",
-       "      <td>93</td>\n",
-       "      <td>ciel dégagé</td>\n",
-       "      <td>3.60</td>\n",
-       "      <td>2025-11-21 19:41:39.229328</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Metz</td>\n",
-       "      <td>-0.62</td>\n",
-       "      <td>74</td>\n",
-       "      <td>ciel dégagé</td>\n",
-       "      <td>1.54</td>\n",
-       "      <td>2025-11-21 19:41:39.330784</td>\n",
+       "      <td>2.66</td>\n",
+       "      <td>2025-11-21 20:00:15.323669</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          ville  temp  humidity              description  wind_speed  \\\n",
-       "0         Paris  1.57        87              ciel dégagé        3.60   \n",
-       "1          Lyon -1.16        84                  couvert        0.89   \n",
-       "2     Marseille  2.28        62                  couvert        2.24   \n",
-       "3      Toulouse  2.99        81                  nuageux        7.72   \n",
-       "4          Nice -4.33        69  légères chutes de neige        2.86   \n",
-       "5      Bordeaux  5.15        70              ciel dégagé        3.09   \n",
-       "6         Lille -0.20        94                    brume        2.06   \n",
-       "7        Nantes  4.96        65              ciel dégagé        1.54   \n",
-       "8    Strasbourg -1.11        74              ciel dégagé        3.23   \n",
-       "9   Montpellier  5.83        47              ciel dégagé        8.75   \n",
-       "10       Rennes  4.80        70              ciel dégagé        2.57   \n",
-       "11     Grenoble -7.46        86          chutes de neige        2.33   \n",
-       "12        Dijon  0.85        86              ciel dégagé        4.63   \n",
-       "13      Avignon  3.79        59              ciel dégagé       12.35   \n",
-       "14        Reims  0.88        93              ciel dégagé        3.60   \n",
-       "15         Metz -0.62        74              ciel dégagé        1.54   \n",
+       "       ville  temp  humidity              description  wind_speed  \\\n",
+       "0      Paris  1.50        87              ciel dégagé        3.60   \n",
+       "1       Lyon -1.16        84                  couvert        3.11   \n",
+       "2  Marseille  2.20        64                  couvert        5.81   \n",
+       "3   Toulouse  2.99        81              ciel dégagé        7.20   \n",
+       "4       Nice -4.33        69  légères chutes de neige        2.66   \n",
        "\n",
-       "                  date_releve  \n",
-       "0  2025-11-21 19:41:37.753814  \n",
-       "1  2025-11-21 19:41:37.854054  \n",
-       "2  2025-11-21 19:41:37.955108  \n",
-       "3  2025-11-21 19:41:38.061109  \n",
-       "4  2025-11-21 19:41:38.170855  \n",
-       "5  2025-11-21 19:41:38.284357  \n",
-       "6  2025-11-21 19:41:38.398460  \n",
-       "7  2025-11-21 19:41:38.503077  \n",
-       "8  2025-11-21 19:41:38.610075  \n",
-       "9  2025-11-21 19:41:38.718721  \n",
-       "10 2025-11-21 19:41:38.822716  \n",
-       "11 2025-11-21 19:41:38.925716  \n",
-       "12 2025-11-21 19:41:39.025716  \n",
-       "13 2025-11-21 19:41:39.129487  \n",
-       "14 2025-11-21 19:41:39.229328  \n",
-       "15 2025-11-21 19:41:39.330784  "
+       "                 date_releve  \n",
+       "0 2025-11-21 20:00:14.902067  \n",
+       "1 2025-11-21 20:00:15.002066  \n",
+       "2 2025-11-21 20:00:15.114667  \n",
+       "3 2025-11-21 20:00:15.217667  \n",
+       "4 2025-11-21 20:00:15.323669  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +224,7 @@
     "\n",
     "# Convertir en DataFrame pour nettoyage et manipulation\n",
     "df_meteo = pd.DataFrame(donnees_meteo)\n",
-    "df_meteo"
+    "df_meteo.head()"
    ]
   },
   {
@@ -482,38 +361,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "d8acdd2b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "         ville  temp  humidity              description  wind_speed  \\\n",
-      "0        Paris  1.57        87              ciel dégagé        3.60   \n",
-      "1         Lyon -1.16        84                  couvert        0.89   \n",
-      "2    Marseille  2.28        62                  couvert        2.24   \n",
-      "3     Toulouse  2.99        81                  nuageux        7.72   \n",
-      "4         Nice -4.33        69  légères chutes de neige        2.86   \n",
-      "5     Bordeaux  5.15        70              ciel dégagé        3.09   \n",
-      "6        Lille -0.20        94                    brume        2.06   \n",
-      "7       Nantes  4.96        65              ciel dégagé        1.54   \n",
-      "8   Strasbourg -1.11        74              ciel dégagé        3.23   \n",
-      "9  Montpellier  5.83        47              ciel dégagé        8.75   \n",
-      "\n",
-      "           date_releve  \n",
-      "0  2025-11-21 19:42:02  \n",
-      "1  2025-11-21 19:42:02  \n",
-      "2  2025-11-21 19:42:02  \n",
-      "3  2025-11-21 19:42:02  \n",
-      "4  2025-11-21 19:42:02  \n",
-      "5  2025-11-21 19:42:02  \n",
-      "6  2025-11-21 19:42:02  \n",
-      "7  2025-11-21 19:42:02  \n",
-      "8  2025-11-21 19:42:02  \n",
-      "9  2025-11-21 19:42:02  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ville</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>description</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>date_releve</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Paris</td>\n",
+       "      <td>1.57</td>\n",
+       "      <td>87</td>\n",
+       "      <td>ciel dégagé</td>\n",
+       "      <td>3.60</td>\n",
+       "      <td>2025-11-21 19:42:02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lyon</td>\n",
+       "      <td>-1.16</td>\n",
+       "      <td>84</td>\n",
+       "      <td>couvert</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>2025-11-21 19:42:02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Marseille</td>\n",
+       "      <td>2.28</td>\n",
+       "      <td>62</td>\n",
+       "      <td>couvert</td>\n",
+       "      <td>2.24</td>\n",
+       "      <td>2025-11-21 19:42:02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Toulouse</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>81</td>\n",
+       "      <td>nuageux</td>\n",
+       "      <td>7.72</td>\n",
+       "      <td>2025-11-21 19:42:02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nice</td>\n",
+       "      <td>-4.33</td>\n",
+       "      <td>69</td>\n",
+       "      <td>légères chutes de neige</td>\n",
+       "      <td>2.86</td>\n",
+       "      <td>2025-11-21 19:42:02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ville  temp  humidity              description  wind_speed  \\\n",
+       "0      Paris  1.57        87              ciel dégagé        3.60   \n",
+       "1       Lyon -1.16        84                  couvert        0.89   \n",
+       "2  Marseille  2.28        62                  couvert        2.24   \n",
+       "3   Toulouse  2.99        81                  nuageux        7.72   \n",
+       "4       Nice -4.33        69  légères chutes de neige        2.86   \n",
+       "\n",
+       "           date_releve  \n",
+       "0  2025-11-21 19:42:02  \n",
+       "1  2025-11-21 19:42:02  \n",
+       "2  2025-11-21 19:42:02  \n",
+       "3  2025-11-21 19:42:02  \n",
+       "4  2025-11-21 19:42:02  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
